# keystone-sdk

./: README.md
examples/hello/: CMakeLists.txt
examples/hello-native/eapp/: CMakeLists.txt  eapp_native.c
examples/hello-native/host/: CMakeLists.txt
examples/hello/eapp/: CMakeLists.txt
examples/hello/host/: CMakeLists.txt
include/keystone/bits/: defs.h
include/keystone/edge/: ocall.h
include/keystone/glibc/: errno.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h
include/keystone/glibc/internal/: tinyprintf.h
include/keystone/host/: elf.h  elf32.h  elf64.h
lib/: CMakeLists.txt
lib/crypto/: CMakeLists.txt
lib/crypto/ciphers/: CMakeLists.txt
lib/crypto/encauth/: CMakeLists.txt
lib/crypto/hashes/: CMakeLists.txt
lib/crypto/headers/: tomcrypt_custom.h
lib/crypto/mac/: CMakeLists.txt
lib/crypto/math/: CMakeLists.txt
lib/crypto/misc/: CMakeLists.txt
lib/crypto/modes/: CMakeLists.txt
lib/crypto/pk/: CMakeLists.txt
lib/crypto/pk/dh/: CMakeLists.txt
lib/crypto/pk/dsa/: CMakeLists.txt
lib/crypto/pk/ec25519/: CMakeLists.txt
lib/crypto/pk/ecc/: CMakeLists.txt
lib/crypto/pk/ed25519/: CMakeLists.txt
lib/crypto/pk/pkcs1/: CMakeLists.txt
lib/crypto/pk/rsa/: CMakeLists.txt
lib/crypto/pk/x25519/: CMakeLists.txt
lib/crypto/prngs/: CMakeLists.txt
lib/crypto/stream/: CMakeLists.txt
lib/crypto/stream/chacha/: CMakeLists.txt
lib/crypto/stream/rabbit/: CMakeLists.txt
lib/crypto/stream/rc4/: CMakeLists.txt
lib/crypto/stream/salsa20/: CMakeLists.txt
lib/crypto/stream/sober128/: CMakeLists.txt
lib/crypto/stream/sosemanuk/: CMakeLists.txt
lib/edge/: CMakeLists.txt  edge_call.c  edge_dispatch.c  edge_syscall.c  ocall.c
lib/enclave/: CMakeLists.txt  syscall.c
lib/glibc/: CMakeLists.txt  printf.c  string.c
lib/glibc/internal/: tinyprintf.c
lib/host/: CMakeLists.txt  elf.cpp  elf32.cpp  elf64.cpp  elffile.cpp  keystone.cpp  keystone_device.cpp  memory.cpp  sha3.cpp
samples/hello-native/eapp/: Makefile  eapp_native.c
samples/hello-native/host/: Makefile  host_native.cpp
tests/: Makefile  test_runner
tests/test_binary/: eyrie-rt
